# temperstub

./: CMakeLists.txt  TODO.md  Temper Architecture - Dev Roadmap.md  TreasurersGuideCE.md  builderrors  systemConfig.md  temperPrompt.md
src/: dbmanager.cpp  dbmanager.h  mainwindow.cpp  mainwindow.h  tmp.cpp
